--- a/src/sass/partials/_main.scss
+++ b/src/sass/partials/_main.scss
@@ -17,12 +17,16 @@
     justify-content: space-between;
     margin: 5px;
 
-    .image-top {
-      position: relative;
+    .im-wrapper {
       flex: 0 0 49%;
-      max-width: 100%;
       max-height: 150px;
-      object-fit: cover;
+
+      .image-top {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        cursor: pointer;
+      }
     }
   }
 
@@ -116,4 +120,3 @@
     }
   }
 }
-
