--- a/src/sass/partials/_main.scss
+++ b/src/sass/partials/_main.scss
@@ -186,19 +186,80 @@
   padding-top: 70px;
 
   .gallery-wrapper {
-    flex: 0 0 32%;
+    flex: 0 0 33.3333%;
+    position: relative;
+    height: 220px;
+    padding: 5px;
 
     .image-bottom {
       object-fit: cover;
       max-width: 100%;
       max-height: 100%;
-      height: 200px;
-      margin-bottom: 5px;
+      height: 100%;
+
     }
     .addjust {
       object-fit: cover;
       width: 197.98px;
     }
   }
+
+  .hoover-wrapper-bottom {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 5px;
+
+    .icon-wrapper {
+      position: absolute;
+      top: 40%;
+      text-align: center;
+      width: 100%;
+      display: none;
+
+
+      .fas {
+        left: 0;
+        top: 50px;
+        margin: 0;
+        padding: 0 10px;
+        color: $color-light;
+        word-spacing: 5px;
+        font-size: 25px;
+        font-weight: 700;
+        display: inline;
+      }
+    }
+  }
 }
 
+.hoover-wrapper-bottom::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: '';
+  background: linear-gradient(to bottom, rgba(72,76,97,0) 0%, rgba(72,76,97,0.8) 75%);
+  opacity: 0;
+  pointer-events: none;
+  border-radius: 5px;
+
+}
+
+.hoover-wrapper-bottom:hover::before {
+  transition: opacity 1s, transform 0.5s;
+  opacity: 0.6;
+}
+
+.hoover-wrapper-bottom:hover .icon-wrapper {
+  display: inline-block;
+}
+
+.fas:hover::before {
+  color: $color-main !important;
+  transition: color 0.5s;
+  cursor: pointer;
+}
