--- a/src/sass/partials/_main.scss
+++ b/src/sass/partials/_main.scss
@@ -94,6 +94,7 @@
   background: linear-gradient(to bottom, rgba(72,76,97,0) 0%, rgba(72,76,97,0.8) 75%);
   opacity: 0;
   pointer-events: none;
+  border-radius: 5px;
 }
 
 .image-hour {
